<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Panels.ControlPanel">

    <Button
        android:id="@+id/controlBtnHide"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:text="@string/hideBtnTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <Button
        android:id="@+id/selectBIOSBtn"
        android:layout_width="95dp"
        android:layout_height="45dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:text="@string/selectBIOSBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/controlListView"
        android:layout_width="564dp"
        android:layout_height="325dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:choiceMode="singleChoice"
        android:clickable="true"
        android:textFilterEnabled="false"
        app:layout_constraintStart_toEndOf="@+id/selectBIOSBtn"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/selectGameBtn"
        android:layout_width="93dp"
        android:layout_height="50dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="18dp"
        android:text="@string/selectISOBtnTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectBIOSBtn" />

    <Button
        android:id="@+id/addItemBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="80dp"
        android:text="@string/addBtn"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <Button
        android:id="@+id/startPauseBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="20dp"
        android:text="@string/startPauseBtnTitle"
        app:layout_constraintBottom_toTopOf="@+id/stopBtn"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/stopBtn"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="40dp"
        android:text="@string/stopBtnTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>