<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/BIOSItembackPanel"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/BIOS_Image_View"
        android:layout_width="222dp"
        android:layout_height="96dp"
        android:layout_weight="1"
        app:srcCompat="@drawable/unknown" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewZoneTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ZoneTitle"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewZone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewVersionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/VersionTitle"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewVersion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewDateTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DateTitle"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>